Fixed embedded picker width when left column is collapsed.

--- a/Plugins/Modules/Rbs/Admin/Assets/css/document-picker.css
+++ b/Plugins/Modules/Rbs/Admin/Assets/css/document-picker.css
@@ -61,6 +61,9 @@
 	margin-left: -180px;
 }
 
+#mainContainer.col-md-12 .document-picker-embedded {
+	margin-left: 0;
+}
 
 .embedded-modal {
 	margin: 10px 0;
